# apifetch-py

./: .gitignore  .zenodo.json  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
bigdatape/: index.html
docs/: bigdatape.md  index.md  reference.md
examples/: bigdatape.py
reference/: index.html
search/: search_index.json
src/apifetch/: __init__.py  _utils.py  api.py  fetch.py  tokens.py
tests/: test_api.py  test_fetch.py  test_tokens.py
