[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apifetch"
version = "0.1.0"
description = "A generic toolkit for token-authenticated REST API retrieval."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "André Leite", email = "leite@castlab.org" },
    { name = "Hugo Vasconcelos", email = "hugo.vasconcelos@ufpe.br" },
    { name = "Diogo Bezerra", email = "diogo.bezerra@ufpe.br" },
    { name = "Marcos Wasilew", email = "marcos.wasilew@gmail.com" },
    { name = "Carlos Amorin", email = "carlos.agaf@ufpe.br" },
]
keywords = ["api", "rest", "http", "token", "pagination", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
dev = ["pytest>=7", "respx>=0.20", "pandas>=1.3"]
docs = ["mkdocs-material>=9", "mkdocstrings[python]>=0.24"]

[project.urls]
Homepage = "https://github.com/StrategicProjects/apifetch-py"
Repository = "https://github.com/StrategicProjects/apifetch-py"
"R sibling" = "https://github.com/StrategicProjects/apifetch"

[tool.hatch.build.targets.wheel]
packages = ["src/apifetch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
